@@ -13,12 +13,13 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/?? IAlibay, melomcr, mdd31 
+??/??/?? IAlibay, melomcr, mdd31, ianmkenney
 
  * 2.1.0
 
 Fixes
   * Fix ITPParser charge reading (Issue #3419).
+  * TRRWriter preserves timestep data (Issue #3350).
   
 Enhancements
 
